[package]
name = "tsv_svelte_compile"
version.workspace = true
edition.workspace = true
description = "Svelte-to-JS compiler (pinned to Svelte's compile() as oracle) and JS canonicalizer"

[dependencies]
tsv_lang.workspace = true
tsv_html.workspace = true
tsv_ts.workspace = true
tsv_svelte.workspace = true
tsv_css.workspace = true
bumpalo.workspace = true
thiserror.workspace = true
# ECMAScript IdentifierPart classification for the rune/store collision walk's
# whole-identifier boundary test (`script_rewrite::is_identifier_part`).
unicode-ident.workspace = true

[lints]
workspace = true
