[package]
name = "tsv_ts"
version.workspace = true
edition.workspace = true
description = "TypeScript parsing and formatting library"

[features]
default = ["convert"]
# Public AST + JSON serialization layer. Off in the @fuzdev/tsv_format_wasm
# build; on for every other consumer.
convert = ["dep:serde", "dep:serde_json"]
# Debug-only: exposes `debug_token_stream` for the differential lexer harness
# (`tsv_debug lex_diff`). Off in production builds.
debug_lex = []

[dependencies]
tsv_lang.workspace = true
bumpalo.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
smallvec.workspace = true
string-interner.workspace = true
phf.workspace = true
unicode-ident.workspace = true

[lints]
workspace = true
