[package]
name = "tsv_ts"
version.workspace = true
edition.workspace = true
description = "TypeScript parsing and formatting library"

[features]
default = ["convert"]
# Public AST + JSON serialization layer. Off in the @fuzdev/tsv_format_wasm
# build; on for every other consumer. Pulls in the shared wire-JSON writer
# substrate (`tsv_lang/json`) the `ast/convert/write/` emitter builds on.
convert = ["dep:serde_json", "tsv_lang/json"]
# Debug-only: exposes `debug_token_stream` for the differential lexer harness
# (`tsv_debug lex_diff`). Off in production builds.
debug_lex = []

[dependencies]
tsv_lang.workspace = true
bumpalo.workspace = true
serde_json = { workspace = true, optional = true }
smallvec.workspace = true
string-interner.workspace = true
unicode-ident.workspace = true

[lints]
workspace = true
